force-app/main/default/objects/AssetType__c/AssetType__c.object-meta.xml
<CustomObject>
    <label>Asset Type</label>
    <nameField>
        <label>Asset type name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>