force-app/main/default/objects/AssetType__c/fields/CanBeHeldInTrust__c.field-meta.xml
<CustomField>
    <fullName>CanBeHeldInTrust__c</fullName>
    <label>Can be held in trust?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TypeFieldPossibilities</valueSetName>
    </valueSet>
</CustomField>