force-app/main/default/objects/AssetType__c/fields/CanProvideIncome__c.field-meta.xml
<CustomField>
    <fullName>CanProvideIncome__c</fullName>
    <description>Used to indicate if assets of this type are able to record an income
Admin use only. Used to drive validation in Salesforce and Nova Service</description>
    <label>Can provide income?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TypeFieldPossibilities</valueSetName>
    </valueSet>
</CustomField>