force-app/main/default/objects/AssetType__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Business use: Used to categorize assets at a high level
Tech use: N/A</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Objects</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Vehicles</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>