force-app/main/default/objects/AssetType__c/fields/DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>DeveloperName__c</fullName>
    <description>The developer name constant of the type. Only admins can update this field. This field is used as the identifier in any configuration or code.</description>
    <label>Developer name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>