force-app/main/default/objects/AssetType__c/fields/HasAPurchaseValue__c.field-meta.xml
<CustomField>
    <fullName>HasAPurchaseValue__c</fullName>
    <description>Business use: n/a
Tech use: Used to display/ask if the related asset should include a purchase value
admin use only</description>
    <label>Has a purchase value?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TypeFieldPossibilities</valueSetName>
    </valueSet>
</CustomField>