force-app/main/default/objects/AssetType__c/fields/HasRelatedLiability__c.field-meta.xml
<CustomField>
    <fullName>HasRelatedLiability__c</fullName>
    <description>Business use: n/a
Tech use: used to display/ask if the related asset should have a related liability 
admin use only</description>
    <label>Has related liability?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TypeFieldPossibilities</valueSetName>
    </valueSet>
</CustomField>