force-app/main/default/objects/AssetType__c/fields/HasRetainedEarnings__c.field-meta.xml
<CustomField>
    <fullName>HasRetainedEarnings__c</fullName>
    <description>Business use: n/a
Tech use: Used to display/ask if related assets should be asking for retained earnings of a client&apos;s business
admin use only</description>
    <label>Has retained earnings?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TypeFieldPossibilities</valueSetName>
    </valueSet>
</CustomField>