force-app/main/default/objects/AssetType__c/fields/PortalName__c.field-meta.xml
<CustomField>
    <fullName>PortalName__c</fullName>
    <description>The name of this asset as displayed to customers in the portal.</description>
    <label>Portal name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>