force-app/main/default/objects/AssetType__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DeveloperName__c</columns>
    <columns>Category__c</columns>
    <columns>CanBeHeldInAPension__c</columns>
    <columns>CanProvideIncome__c</columns>
    <columns>CanBeHeldInTrust__c</columns>
    <columns>HasAPurchaseValue__c</columns>
    <columns>DisplayInPortal__c</columns>
    <columns>HasAnnualEarnings__c</columns>
    <columns>HasRelatedLiability__c</columns>
    <columns>DescriptionCustomer__c</columns>
    <columns>DescriptionInternal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>